# dashboard-hc-pyside6

./: build_exe.sh  dashboard.spec  pyproject.toml  script_carregamento_dados.py  setup_cx.py
src/etl/: dashboard.py
src/etl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/etl/data/: .~lock.ServicoExternoPeriodo20251113092221.csv#  history.json  saved_analyses.json
src/etl/transformation/: inventory.py  os_migration.py
