[project]
name = "etl"
version = "0.1.0"
description = ""
authors = [
    {name = "Carlos Frey",email = "chsf@cin.ufpe.br"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pyside6 (>=6.11.0,<7.0.0)",
    "pandas (>=3.0.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "etl", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]

[project.scripts]
dashboard = "etl.dashboard:main"
